--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,13 +4,13 @@
     </span>
     <div class="social-medias">
         <a href="">
-            <img src="../images/instagram_icon.png" width="35" height="35" alt="Link to Instagram">
+            <img src="/images/instagram_icon.png" width="35" height="35" alt="Link to Instagram">
         </a>
         <a href="">
-            <img src="../images/facebook_icon.png" width="35" height="35" alt="Link to Facebook">
+            <img src="/images/facebook_icon.png" width="35" height="35" alt="Link to Facebook">
         </a>
         <a href="">
-            <img src="../images/twitter_icon.png" width="35" height="35" alt="Link to Twitter">
+            <img src="/images/twitter_icon.png" width="35" height="35" alt="Link to Twitter">
         </a>
     </div>
 </footer>
