--- a/public/styles/new.css
+++ b/public/styles/new.css
@@ -91,11 +91,10 @@ a{
 
 .container{
     margin: 0 auto;
-    min-width: 100vw;
-    height: 80vh;
     display: flex;
     align-items: center;
     text-align: center;
+    padding: 25px 0 25px 0;
 }       
 
 .item-container{
@@ -173,7 +172,7 @@ footer {
     color: white;
     font-weight: bold;
     display: flex;
-    position:absolute;
+    position:relative;
     bottom:0;
     justify-content: space-between;
     padding: 10px 0px 10px 20px;
