--- a/public/styles/item.css
+++ b/public/styles/item.css
@@ -97,22 +97,24 @@ hr{
 /* ---END OF HEADER--- */
 
 .container{
-    margin: 25px auto 25px auto;
+    margin: 0 auto; 
     width: 100%;
     display: flex;
     min-height: 83%;
     align-items: center;
     flex-direction: row;
+    justify-content: center;
 }       
 
 
 .item-img-container{
+    display:flex;
     padding: 20px 20px 20px 20px;
-    min-width: 40%;
-    min-height: 500px;
+    min-width: 550px;
+    min-height: 550px;
     max-height: 600px;
+    max-width: 600px;
     align-items: center;
-    margin: 0 auto;
 }
 
 .item-img-main{
