--- a/views/view/item.ejs
+++ b/views/view/item.ejs
@@ -32,8 +32,8 @@
             </div>
             <div class="button-container"> 
                 <form>
-                    <button type="submit" class="btn-edit"  formmethod="GET" formaction="/items/<%= item.id %>/edit">Edit</button>
-                    <button type="submit" class="btn-delete" formmethod="POST" formaction="/items/<%= item.id %>?_method=DELETE">Delete</button>
+                    <button type="submit" class="btn-edit"  formmethod="GET" formaction="/items/<%= item._id %>/edit">Edit</button>
+                    <button type="submit" class="btn-delete" formmethod="POST" formaction="/items/<%= item._id %>?_method=DELETE">Delete</button>
                 </form>
             </div>
         </div>
