--- a/views/view/edit.ejs
+++ b/views/view/edit.ejs
@@ -65,7 +65,7 @@
                         </div>
                         <div class="image-container">
                             <label for="image">Image</label>
-                            <input id="image" type="file" name="image">
+                            <input id="image" type="file" name="image" required>
                         </div>
                         <button type="submit" class="btn btn-primary">Edit Listing</button>
                     </form>
