--- a/public/styles/items.css
+++ b/public/styles/items.css
@@ -91,12 +91,11 @@ hr {
 
 .item-container {
     /* min-width: 1480px; */
-    margin: 0 auto;
-    width: 100%;
-    max-width: 1440px;
-    height: 80vh;
+    margin: 25px 25px 25px 25px;
+    max-width: 1800px;
+    min-height: 80vh;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     overflow-x: auto;
     flex-shrink: 0;
@@ -205,7 +204,7 @@ footer {
     color: white;
     font-weight: bold;
     display: flex;
-    position:absolute;
+    position:relative;
     bottom:0;
     justify-content: space-between;
     padding: 10px 0px 10px 20px;
