--- a/public/styles/edit.css
+++ b/public/styles/edit.css
@@ -92,6 +92,7 @@ a{
 .container{
     margin: 0 auto;
     padding: 25px 0 25px 0;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
