--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,8 +26,31 @@
                 <ul class="header-menu-list">
                     <li class="list-inline-item"><a href="/items">Browse</a></li>
                     <li class="list-inline-item"><a href="/items/new">Sell</a></li>
-                    <li class="list-inline-item"><a href="">Sign Up</a></li>
-                    <li class="list-inline-item"><a href="">Login</a></li>
+                    <% if(!user){ %>
+                        <li class="list-inline-item"><a href="/users/new">Sign Up</a></li>
+                        <li class="list-inline-item"><a href="/users/login">Login</a></li>
+                    <% } else {%>
+                        <li class="list-inline-item"><a href="/users/profile">My Account</a></li>
+                        <li class="list-inline-item"><a href="/users/logout">Log Out</a></li>
+                    <%}%>
+
                 </ul>
             </nav>
         </div>
+
+        <% if(errorMessages.length > 0) {%>
+            <% errorMessages.forEach(message=>{%>
+                <div class='error'>
+                    <%=message%>
+                </div>
+                <%});%>
+                    <%}%>
+        
+                        <% if(successMessages.length > 0) {%>
+        
+                            <% successMessages.forEach(message=>{%>
+                                <div class='success'>
+                                    <%=message%>
+                                </div>
+                                <%});%>
+                                    <%}%>
