--- a/views/view/item.ejs
+++ b/views/view/item.ejs
@@ -30,6 +30,26 @@
                 <p>Item Details: </p>
                 <p><%= item.details %></p>
             </div>
+            <% console.log(item._id)%>
+            <% if(item.active == true) {%>
+                <div>
+                    <form action="/items/<%= item._id %>/offers" method="POST" enctype="application/x-www-form-urlencoded">
+                        <div class="row">
+                            <div class="col-8">
+                                <input type="number" id="amount" name="amount" class="form-control" step="0.01" placeholder="Enter Offer Amount">
+                            </div>
+                            <div class="col-2">
+                                <input type="submit" value="Submit Offer" class="btn btn-primary">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+               <% if(item.totalOffers > 0){ %>
+                    <div>
+                        <p class="text-danger">Current Highest Offer: $<%= item.highestOffer %></p>
+                    </div>
+                <%}%>
+            <%}%>
         </div>
     </div>
 </div>
