--- a/views/view/item.ejs
+++ b/views/view/item.ejs
@@ -49,7 +49,7 @@
                     </div>
                 <%}%>
             <%} else {%>
-                    <p class="text-danger">Unfortunately, this comic is no longer available.</p>
+                    <p class="text-danger">Unfortunately, this item is no longer available.</p>
             <%}%>
         </div>
     </div>
